Some cool log message system, showing a different color if the message is an information, a success or a failure. Currently a WIP with some buttons to trigger new messages (although normal database related messages should work). The hide button needs a rework, but does work as intended. Also we need to find a way to set the element to hidden: opacity alone means the element still exists and the cursor can change, but visibility on CSS will prevent the transition.

--- a/frontend/app/styles/app.css
+++ b/frontend/app/styles/app.css
@@ -122,3 +122,51 @@ a.feature-list-link {
 .list table tr.test-failed {
     background-color: #FF8888;
 }
+
+
+/* Styles for the log window */
+
+.log-window {
+    border: 1px solid #000000;
+    width: 90%;
+    margin: 20px auto 0px;
+    padding: 10px;
+    border-radius: 4px;
+    border-width: 4px;
+    transition-property: opacity background-color border-color color;
+    transition-duration: 0.5s;
+    transition-timing-function: linear;
+}
+
+.log-window.log-log {
+    background-color: #CCCCCC;
+    border-color: #AAAAAA;
+    color: #444444;
+}
+
+.log-window.log-success {
+    background-color: #AAFFAA;
+    border-color: #66FF66;
+    color: #006600;
+}
+
+.log-window.log-failure {
+    background-color: #FFAAAA;
+    border-color: #FF6666;
+    color: #660000;
+}
+
+.log-window.show-log {
+    opacity: 1;
+}
+
+.log-window.hide-log {
+    opacity: 0;
+}
+
+.hide-log-button {
+    color: #000000;
+    text-align: right;
+    font-size: 0.75em;
+    cursor: pointer;
+}
